--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,71 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
+    <!-- Fonts CDN-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/nav.css">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/new-tweet.css">
+    <link rel="stylesheet" href="./styles/tweets.css">
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+  
+    
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script src="./scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
-    <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
+      <div class="name">TWEETER</div>
+      <div class="navRight">Write <span style="font-family: Source Sans Pro, sans-serif">a new tweet</span></div>
     </nav>
+    <header>
+      <div class="pic">
+          <img src="./images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <p class="username"><span style=" font-weight: bold; ">Abdul</span> Shaukat </p>
+      </div>
+    </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    
+    <main class="container">
+      <section class="new-tweet">
+        <!-- //<h2>Compose Tweet</h2> -->
+        <form method="POST" action="/tweets/">
+          <label for="tweet-text">What are you humming about?</label>
+          <br>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div class="formbottom">
+            <button type="submit" id="#1btn">Tweet</button>
+            <output class="counter" name="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
+      <article class="articlehead">
+        <article.header class="tweetheader">
+          <img src="./images/lawyer.png">
+          <h3>Rhoda Jacob</h3>
+          <p>@Rhoades</p>
+        </article.header>
+        <article.body>
+          <p>If I have Seen furthur it by standing on the shoulders of giant.</p>
+          <hr>
+        </article.body>
+        <article.footer>
+          <p>10 days ago</p>
+        </article.footer>
+      </article>
+    </main>
   </body>
 </html>
+
