--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  
-    
+    <script src="https://kit.fontawesome.com/fa3c8b1df5.js" crossorigin="anonymous"></script>
+
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script src="./scripts/composer-char-counter.js"></script>
@@ -57,18 +57,23 @@
         </form>
       </section>
       <article class="articlehead">
-        <article.header class="tweetheader">
+        <header class="tweetheader">
           <img src="./images/lawyer.png">
           <h3>Rhoda Jacob</h3>
-          <p>@Rhoades</p>
-        </article.header>
-        <article.body>
+          <div class="rightname">@Rhoades</div>
+        </header>
+        <section class="articlebody">
           <p>If I have Seen furthur it by standing on the shoulders of giant.</p>
           <hr>
-        </article.body>
-        <article.footer>
+        </section>
+        <footer class="articlefooter">
           <p>10 days ago</p>
-        </article.footer>
+          <div class="icons">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
       </article>
     </main>
   </body>
