--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,7 @@
   <body>
     <nav>
       <div class="name">TWEETER</div>
-      <div class="navRight">
-       <span style="font-family: Source Sans Pro, sans-serif"></span>  Write a new tweet</span>
+      <div class="navRight"> Write <span style="font-family: Source Sans Pro, sans-serif"></span>  Write a new tweet</span>
       <i class="fas fa-angle-double-down"></i>
       </div>
     </nav>
